add: support to deepresearch RL

--- a/config/envs.yaml
+++ b/config/envs.yaml
@@ -1,4 +1,12 @@
 custom_envs:
+  DeepResearch:
+    env_type: deep_research          # ⇐ 注意要配对文件夹名字
+    max_actions_per_traj: 40
+    env_instruction: "Follow user command, call search, draft sections"
+    max_tokens: 8192
+    env_config:
+      user_prompt: "Write a deep-research article on {topic}"
+      
   SimpleSokoban:
     env_type: sokoban
     max_actions_per_traj: 10 # used in environment state manager to control the actual max actions executed per trajectory
