add: configuration parameters

--- a/config/envs.yaml
+++ b/config/envs.yaml
@@ -1,8 +1,8 @@
 custom_envs:
   DeepResearch:
     env_type: deep_research          # ⇐ 注意要配对文件夹名字
-    max_actions_per_traj: 40
-    env_instruction: "Follow user command, call search, draft sections"
+    max_actions_per_traj: 50
+    env_instruction: ""
     max_tokens: 8192
     env_config: # keys should be a subset of DeepResearchConfig
       max_steps: 100
