--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ datasets
 dill
 flash-attn==2.7.4.post1
 hydra-core
-numpy
+numpy<2.0.0
 pandas
 pybind11
 ray>=2.10
-tensordict>=0.8.0,<0.9.0
+tensordict<=0.6.2
 transformers
 vllm==0.8.2
 wandb
